@@ -33,6 +33,7 @@ export(plotScatterPairs)
 export(retainClusters)
 export(runOrderedClustering)
 export(runOrderedClusteringGenome)
+export(runPermutedData)
 export(scoreClusters)
 export(sle.score)
 export(sle.test)
